# molavades-Intelligent-Job-Search-Assistant

./: .gitignore  README.md  docker-compose.yml  project-tree.txt  pyproject.toml
.github/workflows/: cd.yml  ci.yml
Airflow/: docker-compose.yaml  dockerfile  pyproject.toml
Airflow/dags/: jobs_data_dag.py  multijob_transformed.py  upload_table.py
FastAPI_Services/: Dockerfile  main.py
PoC/: DataAcq_PoC.ipynb  jobserp.py  jobserp_multijob.py  jobserp_multijob_dated.py  software_engineer_jobs.csv  software_engineer_jobs.json  sql_agent.ipynb  tech_jobs.csv  tech_jobs.json
Streamlit_UI_App/: Dockerfile  Home.py  utils.py
Streamlit_UI_App/pages/: 1_🔑Login_Signup.py  2_🔍 Intelligent_Job_Search.py  3_📂Saved_Jobs.py  4_📄Application_Materials.py  5_📊User_Analytics.py  6_📋Job_Listings_Analytics.py
diagrams/: Agents_diag.py  Final_proj_diag.py
tests/: test_integration.py  test_unit.py
