[tool.poetry]
name = "fp-lm"
version = "0.1.0"
description = ""
authors = ["viswanath"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = "^0.115.5"
python-jose = "^3.3.0"
passlib = "^1.7.4"
boto3 = "^1.35.71"
snowflake-connector-python = "^3.12.3"
python-dotenv = "^1.0.1"
email-validator = "^2.2.0"
python-multipart = "^0.0.18"
platformdirs = "^4.3.6"
uvicorn = "^0.32.1"
bcrypt = "^4.2.1"
app = "^0.0.1"
pytest = "^8.3.3"
httpx = "^0.28.0"
langgraph = "^0.2.53"
langchain = "^0.3.9"
langchain-openai = "^0.2.10"
pandas = "^2.2.3"
streamlit = "^1.40.2"
streamlit-option-menu = "^0.4.0"
pymupdf = "^1.25.0"
wordcloud = "^1.9.4"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
