[tool.poetry]
name = "airflowenv"
version = "0.1.0"
description = ""
authors = ["sai-vivekanand <vangala.sa@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
python-dotenv = "^1.0.1"
google-search-results = "^2.4.2"
pandas = "^2.2.3"
snowflake-connector-python = "^3.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
